--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-pokedex",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/d00d1e/react-pokedex",
+  "homepage": "https://d00d1e.github.io/react-pokedex/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -38,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
